# time_series

./: .gitignore  pyproject.toml
ts_nilsen/: 02_ch.ipynb
ts_studying/: 01_hw_time_series.ipynb  01_lect.ipynb  01_ts_first_meeting.md  02_fs_analyse_methods.md  02_hw_time_series.ipynb  02_ts_analyse_methods.md  03_hw_time_series.ipynb  03_ts_ar.md  03_ts_arma.md  Untitled.ipynb  arch_models.ipynb  arma_artificial_data.ipynb  autocorrelation.ipynb  dickey_fuller_test.ipynb  tes_model.ipynb  wma_predict.ipynb
