[tool.poetry]
name = "ts-studying"
version = "0.1.0"
description = ""
authors = ["Andrew <balshowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
jupyter = "^1.0.0"
scipy = "^1.13.0"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
